--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,5 +8,27 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 20px 64px;
+}
+
+
+.title{
+  display: flex;
+  color: #fff;
+  align-items: baseline;
+}
+
+.container__title{
+  font-weight: 600;
+  line-height: 19px;
+  font-size: 40px;
+}
+
+.container__subtitle{
+  display: flex;
+  align-items: end;
+  font-size: 20px;
+  font-weight: 300;
+  padding-left: 10px;
+  line-height: 19px;
 }
