--- a/src/components/Products/products.css
+++ b/src/components/Products/products.css
@@ -1,3 +1,7 @@
 .products{
   padding: 120px 20px 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 22px;
+  grid-row-gap: 30px;
 }
