--- a/src/components/ProductsCard/ProductsCard.css
+++ b/src/components/ProductsCard/ProductsCard.css
@@ -33,6 +33,7 @@
 .card__name{
   grid-column: 1 / 3;
   padding-left: 14px;
+  font-weight: 400;
   font-size: 16px;
   line-height: 19px;
   margin-right: 20px;
@@ -43,27 +44,39 @@
   color: #FFFFFF;
   border-radius: 5px;
   padding: 8px 8px;
-  max-width: 64px;
+  width: auto;
   height: 26px;
   display: flex;
   justify-content: center;
   align-items: center;
   grid-column: 3;
   margin-top: 3px;
+  margin-right: 10px;
 }
 
 .card__price {
-  font-size: 14px;
+  font-size: 15px;
   grid-column: 3;
+  width: 100%;
+  font-weight: 700;
+  line-height: 15px;
+}
+
+.box__card--span{
+  font-size: 15px;
+  padding-right: 2px;
+  font-weight: 700;
+  line-height: 15px;
 }
 
 .card__description {
+  margin-top: 8px;
   grid-column: 1 / 4;
   font-size: 10px;
   line-height: 12px;
   color: #2C2C2C;
   text-align: left; 
-  padding-left: 14px;
+  padding: 0px 14px;
 }
 
 .button__add-cart{
@@ -85,6 +98,7 @@
   align-items: center;
   justify-content: center;
   margin-right: 13px;
+  min-height: 31.91px;
 }
 
 
