--- a/src/components/ProductsCard/ProductsCard.css
+++ b/src/components/ProductsCard/ProductsCard.css
@@ -5,7 +5,7 @@
   background-color: white;
   cursor: pointer;
   margin: 0 auto;
-  max-width: 217.56px;
+  width: 218px;
   min-height: 285px;
   display: grid;
   grid-template-columns: 1fr;
