--- a/src/components/Products/products.css
+++ b/src/components/Products/products.css
@@ -5,3 +5,9 @@
   gap: 22px;
   grid-row-gap: 30px;
 }
+
+@media screen and (max-width: 1100px) {
+  .products {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
+}
